cluster/homa/nodered/003-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: homa
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      volumes: 
      - name: node-red-settings
        configMap:
          name: node-red-settings
      - name: tls-key
        secret:
          secretName: node-home-tls
      - name: node-red-pv-storage
        persistentVolumeClaim:
          claimName: node-red-pvc # 绑定pvc.yml下metadata.name
      containers:
      - name: "node-red"
        image: nodered/node-red
        imagePullPolicy: Always
#        livenessProbe:
#          httpGet:
#            path: /
#            port: 1880
#          initialDelaySeconds: 30
#          periodSeconds: 10
        volumeMounts: # 对spec.volumes下声明的volumes配置具体的挂载
        - name: "node-red-pv-storage" # 使用上面spec.volumes中的node-red-pv-storage
          mountPath: "/data"
        - name: node-red-settings
          mountPath: /data/settings.js
          subPath: settings.js
        - name: tls-key
          mountPath: /data/privkey.pem
          subPath: tls.key
        - name: tls-key
          mountPath: /data/privcert.pem
          subPath: tls.crt
#        resources:
#          limits:
#            cpu: 1024m
#            memory: 1Gi
#          requests:
#            cpu: 1024m
#            memory: 1Gi
