cluster/homa/nodered/004-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: homa
  labels:
    app: node-red
spec:
  selector:
    app: node-red
  type: ClusterIP
  ports:
  - name: web
    port: 1880
    targetPort: 1880
