cluster/homa/nodered/005-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  namespace: homa
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - node.home.meba.xyz
      secretName: node-home-tls
  rules:
  - host: node.home.meba.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-red
              port:
                number: 1880
